--- a/style2.css
+++ b/style2.css
@@ -1,15 +1,15 @@
-.butt{
+.butt {
   border-radius: 14px;
   width: 170px;
-height: 35px;
-margin-left: -250px;
-font-size: large;
-font-weight: lighter;
-background-color: transparent;
-border: 1px solid black;
+  height: 35px;
+  margin-left: -250px;
+  font-size: large;
+  font-weight: lighter;
+  background-color: transparent;
+  border: 1px solid black;
 }
 
-#link{
+#link {
   border-radius: 10px;
   color: black;
   width: 100px;
@@ -18,7 +18,8 @@ border: 1px solid black;
   margin-left: -25px;
   background-color: transparent;
 }
-#href{
+
+#href {
   border-radius: 12px;
   width: 70px;
   height: 30px;
@@ -26,67 +27,83 @@ border: 1px solid black;
   border-style: none;
   margin-left: 20px;
 }
-.to{
+
+.to {
   color: white;
   font-weight: bolder;
   padding-right: 5px;
 }
-.flex{
+
+.flex {
   display: flex;
-list-style: none;
-margin-left: 1090px;
+  list-style: none;
+  margin-left: 1090px;
 }
-#menu{
+
+#menu {
   font-family: comic Sans MS;
   font-weight: 1000;
-  color: #3e342f ;
+  color: #3e342f;
   text-decoration: none;
 }
-#loca{
+
+#loca {
   font-family: comic Sans MS;
   font-weight: 1000;
   margin-left: 100px;
-  color: #3e342f ;
+  color: #3e342f;
   text-decoration: none;
 }
-#deli{
+
+#deli {
   font-family: comic Sans MS;
   font-weight: bolder;
-  color: #3e342f ;
+  color: #3e342f;
   margin-left: 80px;
   text-decoration: none;
 }
-.play{
+
+.play {
   display: flex;
-  list-style:none ;
+  list-style: none;
   margin-top: 20px;
 }
-#img{
+
+#img {
   margin-left: 110px;
 }
-#header{
-  background-color:#c63663;
+
+#header {
+  background-color: #c63663;
   color: white;
   height: 50px;
   padding-left: 45px;
 }
-#com{
+#ere{
+  color: white;
+
+}
+
+#com {
   margin-left: 400px;
   font-size: large;
   padding-top: 10px;
 }
-#png{
-width: 1350px;
-margin-top: -21px;
+
+#png {
+  width: 1350px;
+  margin-top: -21px;
 }
-#div{
-  color:  #ef6a00;
+
+#div {
+  color: #ef6a00;
   margin-left: 470px;
   font-weight: bolder;
   font-size: 50px;
   font-family: comic Sans MS;
 }
-#p{
+
+#p {
   color: #c63663;
   font-weight: bolder;
   font-size: 50px;
@@ -94,36 +111,42 @@ margin-top: -21px;
   font-family: comic Sans MS;
   margin-top: -70px;
 }
-.ward{
-margin-top: -200px;
-margin-left: -20px;
+
+.ward {
+  margin-top: -200px;
+  margin-left: -20px;
 }
-#solid{
+
+#solid {
   font-size: xx-small;
 }
-#new{
+
+#new {
   font-family: impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   margin-left: 470px;
   font-weight: bolder;
   font-size: 60px;
-  color: #3e342f ;
+  color: #3e342f;
   word-spacing: 14px;
   margin-top: -40px;
 }
-.img{
+
+.img {
   margin-left: 320px;
   margin-top: 80px;
   word-spacing: 130px;
 }
-#earn{
-font-family: comic sans MS;
-font-weight: bolder;
-color: #3e342f;
-margin-left: 320px;
-font-size: larger;
-margin-top: -18px;
+
+#earn {
+  font-family: comic sans MS;
+  font-weight: bolder;
+  color: #3e342f;
+  margin-left: 320px;
+  font-size: larger;
+  margin-top: -18px;
 }
-#turn{
+
+#turn {
   font-family: comic sans Ms;
   font-weight: bolder;
   color: #3e342f;
@@ -132,7 +155,8 @@ margin-top: -18px;
   font-size: larger;
   padding-top: 17px;
 }
-#unlock{
+
+#unlock {
   font-family: comic sans Ms;
   font-weight: bolder;
   color: #3e342f;
@@ -140,23 +164,26 @@ margin-top: -18px;
   margin-top: -72px;
   font-size: larger;
 }
-#way{
-margin-top: 3px;
-margin-left: 350px;
-font-family: comic Sans MS;
-font-weight: bolder;
-color: #3e342f;
-font-size: larger;
+
+#way {
+  margin-top: 3px;
+  margin-left: 350px;
+  font-family: comic Sans MS;
+  font-weight: bolder;
+  color: #3e342f;
+  font-size: larger;
 }
-#re{
-padding-left: 700px;
-color: #3e342f;
-font-weight: bolder;
-font-family: comic Sans Ms;
-margin-top: 1px;
-font-size: larger;
+
+#re {
+  padding-left: 700px;
+  color: #3e342f;
+  font-weight: bolder;
+  font-family: comic Sans Ms;
+  margin-top: 1px;
+  font-size: larger;
 }
-#sta{
+
+#sta {
   padding-left: 1010px;
   margin-top: 5px;
   font-family: comic sans ms;
@@ -164,28 +191,32 @@ font-size: larger;
   color: #3e342f;
   font-size: larger;
 }
-.order{
+
+.order {
   color: #3e342f;
   font-weight: lighter;
   font-size: larger;
   margin-left: 290px;
   margin-top: 10px;
 }
-.point{
+
+.point {
   color: #3e342f;
   font-weight: lighter;
   font-size: larger;
   margin-left: 650px;
   margin-top: -80px;
 }
-.visits{
+
+.visits {
   color: #3e342f;
   font-weight: lighter;
   font-size: larger;
   margin-left: 960px;
   margin-top: -60px;
 }
-.button{
+
+.button {
   background-color: #c63663;
   color: white;
   font-weight: bolder;
@@ -197,7 +228,8 @@ font-size: larger;
   margin-left: 560px;
   margin-top: 20px;
 }
-.more{
+
+.more {
   color: #3e342f;
   font-weight: bolder;
   width: 190px;
@@ -208,53 +240,64 @@ font-size: larger;
   background-color: transparent;
   font-size: medium;
 }
-#hr{
+
+#hr {
   margin-top: 60px;
 }
-#rc{
-float: right;
-margin-top: 20px;
+
+#rc {
+  float: right;
+  margin-top: 20px;
 }
-#nut{
+
+#nut {
   width: 230px;
   margin-left: 250px;
   margin-top: 140px;
 }
-#done{
-font-family: cursive,"montserrat",sans-serif;
-font-weight: bolder;
-font-size: 50px;
-color: #3e342f;
-margin-left: 210px;
+
+#done {
+  font-family: cursive, "montserrat", sans-serif;
+  font-weight: bolder;
+  font-size: 50px;
+  color: #3e342f;
+  margin-left: 210px;
 }
-#find{
+
+#find {
   font-weight: lighter;
   font-size: 25px;
   color: #3e342f;
   margin-left: 100px;
   word-spacing: 5px;
 }
-.join{
-font-weight: lighter;
-font-size: larger;
-color: #3e342f;
-margin-left: 80px;
+
+.join {
+  font-weight: lighter;
+  font-size: larger;
+  color: #3e342f;
+  margin-left: 80px;
 }
-.ground{
- margin-left: 160px;
- margin-top: 40px;
+
+.ground {
+  margin-left: 160px;
+  margin-top: 40px;
 }
-.google{
+
+.google {
   margin-left: 360px;
   margin-top: -60px;
 }
-.horizon{
+
+.horizon {
   margin-top: 160px;
 }
-.cafe{
+
+.cafe {
   margin-top: -8px;
 }
-.time{
+
+.time {
   font-weight: bolder;
   font-size: 55px;
   color: #3e342f;
@@ -263,45 +306,52 @@ margin-left: 80px;
   margin-top: -325px;
   float: left;
 }
-.stay{
+
+.stay {
   font-weight: lighter;
   font-size: 28px;
   color: #3e342f;
   margin-left: 800px;
   margin-top: -230px;
 }
-.meu{
+
+.meu {
   background-color: #c63663;
   width: 190px;
   margin-right: 280px;
   border-radius: 17px;
-text-decoration: none;
-color: white;
-font-weight: bolder;
-border-style: none;
-margin-top: -170px;
-height: 40px;
-float: right;
+  text-decoration: none;
+  color: white;
+  font-weight: bolder;
+  border-style: none;
+  margin-top: -170px;
+  height: 40px;
+  float: right;
 }
-.split{
+
+.split {
   margin-top: 200px;
-line-height: normal;
+  line-height: normal;
 }
-.bac{
+
+.bac {
   box-sizing: border-box;
-width: 700px;
-height: 350px;
-border: 1px solid  silver;
-margin-top: 195px;  
+  width: 700px;
+  height: 350px;
+  border: 1px solid silver;
+  margin-top: 195px;
+  margin-left: -10px;
 }
-#sip{
+
+#sip {
   color: #3e342f;
   font-weight: bolder;
   font-size: larger;
   margin-top: -310px;
   margin-left: 250px;
 }
-.hand{
+
+.hand {
   color: #c63663;
   font-weight: bolder;
   font-size: 25px;
@@ -309,36 +359,41 @@ margin-top: 195px;
   margin-left: 160px;
   word-spacing: 7px;
 }
-.home{
+
+.home {
   margin-left: 200px;
   margin-top: -20px;
   float: left;
 }
-.box{
+
+.box {
   box-sizing: border-box;
- width: 330px; 
- height: 350px;
- border: 1px solid silver;
- margin-left: 700px;
- margin-top: -125px;
+  width: 330px;
+  height: 350px;
+  border: 1px solid silver;
+  margin-left: 690px;
+  margin-top: -125px;
 }
-.made{
+
+.made {
   color: #3e342f;
   font-weight: bolder;
   font-size: larger;
   margin-left: 800px;
   margin-top: -320px;
 }
-.all{
+
+.all {
   color: #c63663;
   font-weight: bolder;
   font-size: 25px;
- font-family: impact; 
- word-spacing: 7px;
- margin-left: 770px;
- 
+  font-family: impact;
+  word-spacing: 7px;
+  margin-left: 770px;
+
 }
-.sand{
+
+.sand {
   color: #c63663;
   font-weight: bolder;
   font-size: 25px;
@@ -347,56 +402,64 @@ margin-top: 195px;
   margin-left: 800px;
   margin-top: -15px;
 }
-.bacon{
+
+.bacon {
   margin-left: 730px;
   margin-top: -220px;
   height: 15px;
   float: left;
 }
-.size{
+
+.size {
   box-sizing: border-box;
- width: 320px; 
- height: 350px;
- border: 1px solid silver;
- margin-left: 1030px;
- margin-top: -155px; 
+  width: 320px;
+  height: 350px;
+  border: 1px solid silver;
+  margin-left: 1020px;
+  margin-top: -155px;
 }
-.dunkin{
+
+.dunkin {
   color: #3e342f;
   font-weight: bolder;
   font-size: larger;
   margin-left: 1120px;
   margin-top: -320px;
 }
-.hot{
+
+.hot {
   color: #c63663;
   font-weight: bolder;
   font-size: 25px;
   font-family: impact;
   word-spacing: 7px;
-  margin-left: 1130px; 
+  margin-left: 1130px;
 }
-#coff{
-float: right;
-margin-top: -230px;
-  
+
+#coff {
+  float: right;
+  margin-top: -230px;
+
 }
-.white{
-color: #3e342f;
-font-weight: bolder;
-font-size: 60px;
-font-family: impact;
-margin-top: 320px;
-word-spacing: 14px;
-margin-left: 140px;
-}
-.keep{
+
+.white {
   color: #3e342f;
-  font-weight: lighter; 
+  font-weight: bolder;
+  font-size: 60px;
+  font-family: impact;
+  margin-top: 320px;
+  word-spacing: 14px;
+  margin-left: 140px;
+}
+
+.keep {
+  color: #3e342f;
+  font-weight: lighter;
   font-size: larger;
   margin-left: 250px;
 }
-.gift{
+
+.gift {
   background-color: #c63663;
   color: white;
   font-weight: bolder;
@@ -408,32 +471,37 @@ margin-left: 140px;
   margin-left: 270px;
   margin-top: 30px;
 }
-.dun{
-margin-left: 700px;
-margin-top: -255px;
-float: left;
+
+.dun {
+  margin-left: 700px;
+  margin-top: -255px;
+  float: left;
 }
-.map{
+
+.map {
   margin-top: -10px;
   margin-right: 10px;
 }
-.visit{
+
+.visit {
   color: #3e342f;
   font-weight: bolder;
   font-size: 60px;
-  font-family: impact; 
+  font-family: impact;
   margin-left: 900px;
-  margin-top: -520px; 
+  margin-top: -520px;
   word-spacing: 10px;
 }
-.near{
+
+.near {
   color: #3e342f;
-  font-weight: lighter; 
+  font-weight: lighter;
   font-size: 30px;
   margin-left: 900px;
   margin-top: 5px;
 }
-.loca{
+
+.loca {
   background-color: #c63663;
   color: white;
   font-weight: bolder;
@@ -445,212 +513,241 @@ float: left;
   margin-left: 950px;
   margin-top: 30px;
 }
-.one{
+
+.one {
   margin-top: 308px;
 }
-.inks{
+
+.inks {
   color: #3e342f;
-  font-weight: lighter; 
+  font-weight: lighter;
   font-size: larger;
   margin-top: 50px;
   margin-left: 300px;
 }
-.press{
+
+.press {
   color: #3e342f;
-  font-weight: bolder; 
-  font-size: small; 
+  font-weight: bolder;
+  font-size: small;
   margin-left: 135px;
   list-style: none;
   margin-top: 30px;
 
 }
-.app{
+
+.app {
   color: #3e342f;
-  font-weight: bolder; 
-  font-size: small;  
+  font-weight: bolder;
+  font-size: small;
   list-style: none;
   margin-left: 210px;
   float: left;
   margin-top: -8px;
 }
-.corp{
+
+.corp {
   color: #3e342f;
-  font-weight: bolder; 
-  font-size: small; 
+  font-weight: bolder;
+  font-size: small;
   list-style: none;
   margin-left: 280px;
   float: left;
   margin-top: -8px;
 }
-.sustain{
+
+.sustain {
   color: #3e342f;
-  font-weight: bolder; 
-  font-size: small; 
+  font-weight: bolder;
+  font-size: small;
   list-style: none;
   margin-left: 350px;
   float: left;
   margin-top: -8px;
 }
-.us{
+
+.us {
   color: #3e342f;
-  font-weight: bolder; 
-  font-size: small; 
+  font-weight: bolder;
+  font-size: small;
   list-style: none;
   margin-left: 135px;
   position: relative;
   top: 10px;
 }
-.franch{
+
+.franch {
   color: #3e342f;
-  font-weight: bolder; 
-  font-size: small; 
+  font-weight: bolder;
+  font-size: small;
   list-style: none;
   margin-left: 210px;
   float: left;
   margin-top: 3px;
 }
-.cont{
+
+.cont {
   color: #3e342f;
-  font-weight: bolder; 
-  font-size: small; 
+  font-weight: bolder;
+  font-size: small;
   list-style: none;
   margin-left: 77px;
-  
+
 }
-.site{
+
+.site {
   color: #3e342f;
-  font-weight: bolder; 
-  font-size: small; 
+  font-weight: bolder;
+  font-size: small;
   list-style: none;
   margin-left: 108px;
   float: left;
   margin-top: -10px;
 }
-.foll{
+
+.foll {
   color: #3e342f;
-  font-weight: lighter; 
-  font-size: larger;  
+  font-weight: lighter;
+  font-size: larger;
   margin-left: 900px;
   margin-top: -130px;
 }
-.two{
+
+.two {
   margin-left: 900px;
   margin-top: 20px;
   word-spacing: 10px;
 }
-.three{
+
+.three {
   color: #3e342f;
   margin-top: 90px;
   margin-left: 700px;
   font-weight: lighter;
   font-size: medium;
 }
-.hr-before{
+
+.hr-before {
   width: 330px;
   margin-left: 270px;
   margin-top: -15px;
 }
-.after{
+
+.after {
   width: 330px;
   float: right;
   margin-top: -17px;
   margin-right: 90px;
 }
-.five{
+
+.five {
   margin-left: 320px;
-margin-top: 50px;
+  margin-top: 50px;
 }
-.six{
+
+.six {
   margin-left: 200px;
   margin-top: -60px;
-  }
-.seven{
+}
+
+.seven {
   margin-left: 360px;
   margin-top: -60px;
 }
-.eight{
+
+.eight {
   margin-left: 470px;
   margin-top: -50px;
 }
-.nine{
+
+.nine {
   margin-left: 620px;
   margin-top: -50px;
 }
-.ten{
+
+.ten {
   margin-left: 820px;
   margin-top: -50px;
 }
-.a{
+
+.a {
   color: #3e342f;
-  font-weight: bolder; 
-  font-size: x-small; 
-  list-style: none;  
-  
+  font-weight: bolder;
+  font-size: x-small;
+  list-style: none;
+
 }
-.b{
+
+.b {
   color: #3e342f;
-  font-weight: bolder; 
-  font-size: x-small; 
+  font-weight: bolder;
+  font-size: x-small;
   list-style: none;
   margin-left: 40px;
   margin-top: -10px;
-  }
-  .c{
-    color: #3e342f;
-    font-weight: bolder; 
-    font-size: x-small; 
-    list-style: none; 
+}
+
+.c {
+  color: #3e342f;
+  font-weight: bolder;
+  font-size:x-small;
+  list-style: none;
   margin-left: 80px;
   margin-top: -10px;
-    
-  }
-  .d{
-    color: #3e342f;
-    font-weight: bolder; 
-    font-size: x-small; 
-    list-style: none; 
-    margin-left: 160px;
-    margin-top: -10px;
-  }
-  .e{
-    color: #3e342f;
-    font-weight: bolder; 
-    font-size: x-small; 
-    list-style: none; 
-    margin-left: 200px;
-    margin-top: -10px;
-  
-  }
-  .f{
-    color: #3e342f;
-    font-weight: bolder; 
-    font-size: x-small; 
-    list-style: none; 
-    margin-left: 250px;
-    margin-top: -10px;
-  
-  }
-  .g{
-    color: #3e342f;
-    font-weight: bolder; 
-    font-size: xx-small; 
-    list-style: none; 
-    margin-left: 350px;
-    margin-top: -10px;
-  }
-.hr--{
-margin-right: 120px;
-margin-top: 40px;
+
 }
-.ip{
+
+.d {
+  color: #3e342f;
+  font-weight: bolder;
+  font-size: x-small;
+  list-style: none;
+  margin-left: 160px;
+  margin-top: -10px;
+}
+
+.e {
+  color: #3e342f;
+  font-weight: bolder;
+  font-size: x-small;
+  list-style: none;
+  margin-left: 200px;
+  margin-top: -10px;
+
+}
+
+.f {
+  color: #3e342f;
+  font-weight: bolder;
+  font-size:x-small;
+  list-style: none;
+  margin-left: 250px;
+  margin-top: -10px;
+
+}
+
+.g {
+  color: #3e342f;
+  font-weight: bolder;
+  font-size:  x-small;
+  list-style: none;
+  margin-left: 350px;
+  margin-top: -10px;
+}
+
+.hr-- {
+  margin-right: 120px;
+  margin-top: 40px;
+}
+
+.ip {
   font-weight: lighter;
   font-size: small;
   margin-top: 40px;
   margin-left: 350px;
 }
-.xin{
+
+.xin {
   position: relative;
-right: 100px;
+  right: 100px;
 }
-
-
